--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "element-plus": "^2.2.13",
-    "vue": "^3.2.36"
+    "pinia": "^2.0.22",
+    "vue": "^3.2.36",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.4",
