--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element-plus-vite-starter",
+  "name": "web-print-frontend",
   "private": true,
   "version": "0.1.0",
   "scripts": {
